js, css ファイル分割、バリデーション追加

--- a/spring-boot-app/src/main/resources/application.properties
+++ b/spring-boot-app/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=spring-boot-app
 
-# port設定
+# サーバ設定
 server.port=8080
 server.forward-headers-strategy=FRAMEWORK
 spring.devtools.restart.trigger-file=.reloadtrigger
 
-# Supabase 通信用設定
+# Supabase 通信設定
 supabase.url=${SUPABASE_URL}
 supabase.anon-key=${SUPABASE_ANON_KEY}
 
@@ -22,9 +22,11 @@ spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.leak-detection-threshold=5000
 # JPA設定
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+# SQLログ
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.orm.jdbc.bind=TRACE
+spring.jpa.properties.hibernate.format_sql=true
 
-# Spring SecurityのログレベルをDEBUGに設定し、詳細な情報を出力させる
+# Spring Securityログ
 logging.level.org.springframework.security=DEBUG
