コメント削除, パス修正

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,26 +5,26 @@
   },
   "features": {
     "ghcr.io/devcontainers/features/java:1": {
-      "version": "21" // Javaのバージョンを指定
+      "version": "21"
     },
     "ghcr.io/devcontainers/features/python:1": {
-      "version": "3.12" // Pythonのバージョンを指定
+      "version": "3.12"
     },
     "ghcr.io/devcontainers/features/go:1": {
-      "version": "1.21" // Goのバージョンを指定
+      "version": "1.21"
     },
-    "ghcr.io/devcontainers/features/rust:1": {}, // Rust のバージョン指定なし（最新の安定版を使用）
+    "ghcr.io/devcontainers/features/rust:1": {},
     "ghcr.io/devcontainers/features/node:1": {
-      "version": "22" // Node.jsのバージョンを指定
+      "version": "22"
     },
-    "ghcr.io/devcontainers/features/docker-in-docker:2": {} // Dockerコマンドを使えるようにする
+    "ghcr.io/devcontainers/features/docker-in-docker:2": {}
   },
   "customizations": {
     "vscode": {
       "extensions": [
-        // 各言語の推奨拡張機能
         "vscjava.vscode-java-pack",
-        "vmware.vscode-boot-starter",
+        "vmware.vscode-spring-boot",
+        "vmware.vscode-boot-dev-pack",
         "ms-python.python",
         "ms-python.vscode-pylance",
         "golang.go",
@@ -35,6 +35,5 @@
       ]
     }
   },
-  // コンテナ作成後に実行するコマンド(実行シェル指定)
-  "postCreateCommand": "./devcontainer/post-create-command.sh"
+  "postCreateCommand": ".devcontainer/post-create-command.sh"
 }
