--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,45 +1,3 @@
-services:
-  spring-boot-app:
-    build:
-      context: ./spring-boot-app
-      dockerfile: Dockerfile
-    container_name: spring-boot-app
-    ports:
-      - "8080:8080"
-    env_file:
-      - .env
-    restart: unless-stopped
-    networks:
-      - backend
-
-  flask-app:
-    build:
-      context: ./flask-app
-      dockerfile: Dockerfile
-    container_name: flask-app
-    ports:
-      - "5000:5000"
-    env_file:
-      - .env
-    restart: unless-stopped
-    networks:
-      - backend
-
-networks:
-  backend:
-    driver: bridge
-
-  # -------------------------------------------------
-  # 将来のNext.jsアプリケーションサービス（例）
-  # -------------------------------------------------
-  # nextjs-app:
-  #   build:
-  #     context: ./nextjs-app
-  #   ports:
-  #     - "3000:3000"
-  #   environment:
-  #     - NEXT_PUBLIC_SUPABASE_URL=${SUPABASE_URL}
-  #     - NEXT_PUBLIC_SUPABASE_ANON_KEY=${SUPABASE_ANON_KEY}
-  #   restart: unless-stopped
-  #   depends_on:
-  #     - flask-app
+include:
+  - spring-boot-app/docker-compose.yml
+  - flask-app/docker-compose.yml
