--- a/spring-boot-app/Dockerfile
+++ b/spring-boot-app/Dockerfile
@@ -1,5 +1,5 @@
-# Maven + Java イメージ
-FROM maven:3.9.11-eclipse-temurin-21
+# ビルドステージ Maven + Java イメージ
+FROM maven:3.9.11-eclipse-temurin-21 AS build
 
 # 作業ディレクトリ設定
 WORKDIR /app
@@ -13,8 +13,17 @@ RUN mvn dependency:go-offline
 # モジュールコピー
 COPY ./src ./src
 
-# Mavenビルド（テストスキップ）, jar 移動・リネーム
-RUN mvn package -DskipTests && mv target/*.jar app.jar
+# Mavenビルド（テストスキップ）
+RUN mvn package -DskipTests
+
+# 実行ステージ jreイメージ
+FROM eclipse-temurin:21-jre-jammy
+
+# 作業ディレクトリ設定
+WORKDIR /app
+
+# ビルドした jarコピー
+COPY --from=build /app/target/*.jar ./app.jar
 
 # SpringBootアプリ起動
 CMD ["java", "-jar", "app.jar"]
