go バージョン更新, CA証明不要になる

--- a/gin-app/Dockerfile
+++ b/gin-app/Dockerfile
@@ -1,5 +1,5 @@
 # ビルドステージ 開発用イメージ
-FROM golang:1.24-bullseye AS builder
+FROM golang:1.25-alpine AS builder
 
 # 作業ディレクトリ作成
 WORKDIR /app
@@ -17,10 +17,12 @@ COPY ./static ./static
 RUN go build -o app main.go
 
 # 実行ステージ 実行用イメージ
-FROM debian:bullseye-slim
+FROM alpine
 
 # CA証明書をインストールしてTLS通信を可能にする
-RUN apt-get update && apt-get install -y ca-certificates && rm -rf /var/lib/apt/lists/*
+# RUN apt-get update && apt-get install -y ca-certificates && rm -rf /var/lib/apt/lists/*
+# CA証明書をインストールしてTLS通信を可能にする
+# RUN apk add --no-cache ca-certificates
 
 # 作業ディレクトリ作成
 WORKDIR /app
