--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,3 +2,4 @@ include:
   - spring-boot-app/docker-compose.yml
   - flask-app/docker-compose.yml
   - gin-app/docker-compose.yml
+  - actix-web-app/docker-compose.yml
