--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,3 +3,4 @@ include:
   - flask-app/docker-compose.yml
   - gin-app/docker-compose.yml
   - actix-web-app/docker-compose.yml
+  - next-app/docker-compose.yml
