next, spring 実行

--- a/spring-boot-app/src/main/resources/application.properties
+++ b/spring-boot-app/src/main/resources/application.properties
@@ -4,6 +4,9 @@ spring.application.name=spring-boot-app
 server.port=8080
 server.forward-headers-strategy=FRAMEWORK
 
+# フロントエンドURL設定
+frontend.url=${FRONTEND_URL:}
+
 # Supabase 通信設定
 supabase.url=${SUPABASE_URL}
 supabase.anon-key=${SUPABASE_ANON_KEY}
