--- a/next-app/package.json
+++ b/next-app/package.json
@@ -14,10 +14,10 @@
     "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.3.5",
     "@prisma/client": "^6.19.0",
-    "next": "16.0.4",
+    "next": "^16.0.7",
     "prisma": "^6.19.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
